Fix for inaccurate scrollbar length when displaying two different chromosomes (#72)
* git issue 37. Scrollbar wackiness.

* git issue 37. Scrollbar wackiness.

--- a/css/hic.css
+++ b/css/hic.css
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   width: 861px;
-  height: 909px;
+  height: 921px;
   background-color: #fff;
   border-style: solid;
   border-width: thin;
@@ -33,8 +33,8 @@
 .hic-logo-container {
   position: relative;
   float: left;
-  width: 48px;
-  height: 48px;
+  width: 60px;
+  height: 60px;
   background-image: url("../img/juicebox-logo-translucent.png"); }
 
 .hic-chromosome-selector-widget-container {
